# delta-js

./: .gitignore  .npmignore  Cargo.toml  LICENSE  index.d.ts  index.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: CI.yml
__archive/: .gitignore  Cargo.toml  README.md
__archive/deltalake/: table.ts
delta/: index.ts  native.d.ts  native.js  table.ts  transaction.ts
delta/reader/: query.ts
delta/writer/: properties.ts
deltalake/: table.ts
examples/: metadata.mjs  simple.mjs  stream.mjs  vacuum.mjs  write.mjs  write.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
src/: error.rs  lib.rs  query.rs  stream.rs  table.rs  transaction.rs  utils.rs  writer.rs
test/resources/covid-19/_delta_log/: .00000000000000000000.json.crc
test/resources/test-table/: .part-00000-7a121a02-86e2-40a3-8877-8cda5010d717-c000.snappy.parquet.crc  part-00000-7a121a02-86e2-40a3-8877-8cda5010d717-c000.snappy.parquet
test/resources/test-table/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc
tests/: vacuum.spec.ts
tests/resources/covid-19/: part-00000-1c1d1180-f7df-41f5-8901-fb82f5108102-c000.snappy.parquet
tests/resources/covid-19/_delta_log/: .00000000000000000000.crc.crc
