[package]
edition = "2021"
name = "delta-js_delta-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.25", default-features = false, features = [
    "napi9",
    "compat-mode",
    "tokio_rt",
    "serde-json",
    "web_stream",
] }
napi-derive = "3.0.0-alpha.23"
deltalake = { version = "0.20.1", features = ["s3", "datafusion"] }
futures = "0.3"
tokio = { version = "1.33.0" }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
serde = "1.0.192"
serde_json = "1.0.108"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
