[package]
name = "delta-js"
version = "0.0.0"
authors = ["Julien Guillot"]
edition = "2021"
homepage = "https://github.com/guillotjulien/delta-js"
repository = "https://github.com/guillotjulien/delta-js"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.25", default-features = false, features = [
    "napi9",
    "compat-mode",
    "serde-json",
    "web_stream",
] }
napi-derive = { version = "3.0.0-alpha.23" }
deltalake = { version = "0.25.0", features = ["s3", "datafusion", "lakefs"] }
futures = "0.3"
tokio = { version = "1.33.0" }
tokio-stream = "0.1"
serde_json = "1.0.108"
chrono = "0.4.39"
parking_lot = "0.12.3"
thiserror = "2.0.12"
arrow-schema = { version = "54.2.1", features = ["serde"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
codegen-units = 1
lto = "fat"
