[package]
name = "delta-js"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake = { version = "0.16.2", features = ["s3"] }
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api"]
